@@ -71,4 +71,93 @@
             <version>3.1.0.RELEASE</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                    <warName>${application.name}</warName>
+                    <outputDirectory>target/dist</outputDirectory>
+                    <webResources>
+                        <resource>
+                            <directory>project/${application.name}/</directory>
+                            <includes>
+                                <include>*.css</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>project/${application.name}/</directory>
+                            <includes>
+                                <include>images/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>src/main/webapp</directory>
+                            <includes>
+                                <include>**/*.properties</include>
+                            </includes>
+                            <filtering>true</filtering>
+                        </resource>
+                        <resource>
+                            <directory>src/main/webapp/META-INF</directory>
+                            <includes>
+                                <include>context.xml</include>
+                            </includes>
+                            <filtering>true</filtering>
+                            <targetPath>META-INF</targetPath>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- todo this plugin is not working!!-->
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>8093</port>
+                    <path>/talent-studio</path>
+                    <warSourceDirectory>
+                        ${project.build.directory}/${project.build.finalName}
+                    </warSourceDirectory>
+                    <!--<warDirectory>${project.build.directory}/talent-studio.war</warDirectory>-->
+                    <!--<finalName>talent-studio.war</finalName>-->
+                    <systemProperties>
+                        <org.apache.catalina.startup.ContextConfig.jarsToSkip>*
+                        </org.apache.catalina.startup.ContextConfig.jarsToSkip>
+                        <!-- work around .. see: https://issues.apache.org/jira/browse/MTOMCAT-281 -->
+                        <catalina.config>${project.baseUri}/target/tomcat/logs</catalina.config>
+                        <JAVA_OPTS>-Xms2048m -Xmx2048m -XX:+CMSClassUnloadingEnabled -XX:PermSize=2048m
+                            -XX:MaxPermSize=3072m
+                        </JAVA_OPTS>
+                    </systemProperties>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.oracle</groupId>
+                        <artifactId>ojdbc7</artifactId>
+                        <version>14.0.0</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.mail</groupId>
+                        <artifactId>mail</artifactId>
+                        <version>1.4.7</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>activation</artifactId>
+                        <version>1.1.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
